# ChangeLog for media-libs/sbc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/sbc/ChangeLog,v 1.31 2014/12/06 16:41:42 ago Exp $

  06 Dec 2014; Agostino Sarubbo <ago@gentoo.org> sbc-1.3.ebuild:
  Stable for ia64, wrt bug #529948

  05 Dec 2014; Agostino Sarubbo <ago@gentoo.org> sbc-1.3.ebuild:
  Stable for x86, wrt bug #529948

  04 Dec 2014; Agostino Sarubbo <ago@gentoo.org> sbc-1.3.ebuild:
  Stable for ppc64, wrt bug #529948

  03 Dec 2014; Agostino Sarubbo <ago@gentoo.org> sbc-1.3.ebuild:
  Stable for ppc, wrt bug #529948

  02 Dec 2014; Markus Meier <maekke@gentoo.org> sbc-1.3.ebuild:
  arm stable, bug #529948

  26 Nov 2014; Agostino Sarubbo <ago@gentoo.org> sbc-1.3.ebuild:
  Stable for amd64, wrt bug #529948

  22 Nov 2014; Jeroen Roovers <jer@gentoo.org> sbc-1.3.ebuild:
  Stable for HPPA (bug #529948).

*sbc-1.3 (03 Nov 2014)

  03 Nov 2014; Pacho Ramos <pacho@gentoo.org> +sbc-1.3.ebuild, -sbc-1.1.ebuild:
  Version bump, drop old (#528026 by mrueg)

  13 May 2014; Agostino Sarubbo <ago@gentoo.org> sbc-1.2.ebuild:
  Stable for ia64, wrt bug #506820

  04 May 2014; Agostino Sarubbo <ago@gentoo.org> sbc-1.2.ebuild:
  Stable for x86, wrt bug #506820

  20 Apr 2014; Agostino Sarubbo <ago@gentoo.org> sbc-1.2.ebuild:
  Stable for ppc64, wrt bug #506820

  18 Apr 2014; Markus Meier <maekke@gentoo.org> sbc-1.2.ebuild:
  arm stable, bug #506820

  13 Apr 2014; Agostino Sarubbo <ago@gentoo.org> sbc-1.2.ebuild:
  Stable for ppc, wrt bug #506820

  13 Apr 2014; Pacho Ramos <pacho@gentoo.org> sbc-1.2.ebuild:
  amd64 stable, bug #506820

  05 Apr 2014; Jeroen Roovers <jer@gentoo.org> sbc-1.2.ebuild:
  Stable for HPPA (bug #506820).

*sbc-1.2 (01 Feb 2014)

  01 Feb 2014; Pacho Ramos <pacho@gentoo.org> +sbc-1.2.ebuild, -sbc-1.0.ebuild,
  -sbc-1.1-r1.ebuild:
  Version bump, drop old (#499676 by Manuel Ruger)

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> sbc-1.1.ebuild: