@@ -4,23 +4,15 @@ Hash: SHA256
 DIST sbc-1.2.tar.xz 246228 SHA256 c2f01ea54f7473704825113a9cdd46a23e67c650eff575f0670c3d9d66c4a5dc SHA512 65187dbe59e77da312f7dcc9a807959855ef8b6ff0be5403738f9a7b69035806f889d841209755c735525b81c1ba839e858a9ea8316defbc9dfa86104a35ca1d WHIRLPOOL 0496af202879d4f9dcd5cc470ae3cfbaab5e1badae9c9296aeeb082b5fee66657f482efa801d5aa91371e07261f76811d486b0ac2fd8de5e7c3a702505e596d2
 DIST sbc-1.3.tar.xz 246292 SHA256 e61022cf576f14190241e7071753fdacdce5d1dea89ffd704110fc50be689309 SHA512 c11cb1ede8abdb226d404ce34307d217b716b91cbe550ed90cb5387b062b7b97a6b7a81371de6f462d8c1429cb3299869a1bda347fa175e9d81cfa2bc2056c8b WHIRLPOOL 2237003adf9ed226e679034442f73ffe5b2088b51ba229e1435901c351be22c48cc111f86f219e81ad7b162c7e8df41420f329a037a825304d8c21a0c52e8e7f
 EBUILD sbc-1.2.ebuild 949 SHA256 75e2684a07c6b652c6ce45551207c911d3b4583891f6719721ce8c5953472f83 SHA512 11df3ab8ce40a310d44092fec700ac952639718af99f0d717e0bbe120119122152b5700b9217687defb7823af65798c509f10d8c15996c0e946bd9d1ff9eaf76 WHIRLPOOL 556a9f6c4306728defe3bf5f793613a93339d1d475ed2be19ecc120ddc94619c2293c2b17f0c629659aeef27cdf7636925d2e9b5e20a592f8037364aa338e965
-EBUILD sbc-1.3.ebuild 948 SHA256 7b95ea544a8a04a758f730fa5e17b087fdec8e5157b0c15f3228b915f477ec71 SHA512 899ef1f3ea50f0683d0550430b10adb1efde6ceeb5e2566fe8c0580fa6433aa85daa13c8bb499f0e4ef40249771671e345f06902d823618bdbc412307a19960c WHIRLPOOL cd96afe6bac08ce600caa893d28c989e90619d6bde0179556db5448fc3bd7ce2eda4f8ffe538b1e0c7f8a6ae311cc2d42eb16191f8cff6af43e14c8a49c27ee9
-MISC ChangeLog 3639 SHA256 258d172b90934667942aba0ce86adaf73fff8fbe2c5482480a84b70167c27012 SHA512 a3daaa7ae306b08d4cc71906dfe5734a41c05d07a3df6d6b8fe0743091a2586836dd83ffd553727d69204cd0ab66ac456e4abb402f454c517135cb15220bf8e4 WHIRLPOOL 09ff415ee5efe4e20ef845a21f785912530754a3e354246721257cfd1941f1e13bb5d19e439c7ff16477fb9cc54419771c0c9007632ac6d75fb0bab667a25edc
+EBUILD sbc-1.3.ebuild 959 SHA256 f6560b713882c3bed68dbd28f57e4a23010e0ccc75f031c6c221f39b45dc0993 SHA512 da4b2bcf14fcf4488e42ea5086ffebc94d5190bc1671c014d56dbacfe54ce010167668425239c1f80c1e2c2f1093fc2cf64275a37576a3301132b31d110272e2 WHIRLPOOL f88038deaa4d7003ffd12345ea4f1374d1595570e481edadfa8a694ba2a968bf90a6ee7252097aa3d7ef1bf9452c2a9dc978584303350aeca1480fa70be66ec2
+MISC ChangeLog 3745 SHA256 67323d5b1dda06e52e9f6eaa47ce2863aea78d29fcd3fcfe67fc161641eac71e SHA512 f2e2d9ad6594dabb533332e64fb52d877311214b09fa1c1cccc3fea4b2ce7b38307693a319b0a217314b944383c0883b4100f9a17c807f335ac474a71681062b WHIRLPOOL c90cf4a0c53f0cc84640004039ed9fa7a11126b5195740acca76775d76d1aac65e07681661a78cf1e59c9b08bbef992d0fbbbc08163da390b3996fea07114551
 MISC metadata.xml 249 SHA256 97f1de987bb56eede02a3bd88fc18b1f972d5b9428111280111478b4c24d5234 SHA512 9e34ac10a65359268ae6a405d18aa4614e3763c51df78a2b1f917502bfd2aeaa34d70694861cd1c7f11052b81bc7f45f70e169080ec1f593b394cb15bc0c6f59 WHIRLPOOL ad66ba9054bbc67f00967281b99a0c30a3bb659d0f976d3f901e8fae0ea92fe65616e43b3d9e96b30e0e00139a1ceb6079ba0bdada0c30cecb42ef9090073ed7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJUgzHHAAoJELp701BxlEWfNX0QAITJWCPE+RU7lN2auFhZG80F
-a7OMF74HHOzLzXucfBLrV9d8I5qrj5BhTIa2j1+AsIm/jCAel/IOt+eMQ//eZ7/U
-gIU8Ka4aBftBqNLdSyzQBu6Y8M6cxaEe1kZo/115Y8jDzuN2T2FlY/Igp1yGw+O8
-qEa3jWvH/Ac1V+S8eLpb+tzUbzVkN5fsaSEX23c6bSJeExLvgOtPDnKfa2/HqOX5
-xyqJqYu9bBNdA4pnMjZcdMYxL3ZVnoFCxw5NlSFMlS7wRsHzMWWdGJ2Fa3R/MXp5
-9N3jdWfOSglaMksDv88zHcc2SwSYtEqSkDbrDzRA8JZQ3hyGIiALXleaeKY6XoXW
-XkQyA11mZOPbNS8bG2NGjh6YO74FyLHlMcvpDNW9nEMfrjOfmjYeA54XM5Ajw7jw
-UMevyVlUh84IW3Z/SmY8Qh1b2/oWbWTqir8xPscRn3O6k3b7kjm3SrcIxOTxeggu
-PEuLZdd0ZCIB6+FMEGgGtTktTc1CHNrh9O0zcQYsQ8e5/fhduXlDlF3W16N7S/vg
-aP9+KLy60O7F3TbKylHBLgZS2v6rYfuq+HWkd/6GdB7MAoUmigt4D4kQWq7vI2nD
-4DJMN6ItUPZ6klqE+RpLs22ze5QoZzBmgZpQSeLnziwGYaUeGX5iL2xhC5XhrX6p
-Y3npwSNGc0S3ZJv7O3NC
-=XVMD
+iKYEAREIAGYFAlSv3chfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDFGNDg1MzU4NjMzRTAyNzA3RkY0ODA1QzAz
+RUUwM0ExQ0U1RDU0RTgACgkQA+4Doc5dVOgkAgCgkWO456qnTp5s3fQpVTmYlgGU
+gGcAn0htxPHJBEldeAMR9WvZEAq7SAyr
+=yIpI
 -----END PGP SIGNATURE-----
