@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/sbc
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/sbc/ChangeLog,v 1.31 2014/12/06 16:41:42 ago Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/sbc/ChangeLog,v 1.32 2015/01/09 13:55:19 klausman Exp $
+
+  09 Jan 2015; Tobias Klausmann <klausman@gentoo.org> sbc-1.3.ebuild:
+  Stable on alpha, bug 536034
 
   06 Dec 2014; Agostino Sarubbo <ago@gentoo.org> sbc-1.3.ebuild:
   Stable for ia64, wrt bug #529948
